--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "display": "fullscreen",
     "background_color": "#888888",
     "theme_color": "#ff8800",
-    "description": "Red Green Blue ",
+    "description": "Red Green Blue Alfa",
     "orientation": "any",
     "prefer_related_applications": false,
     "icons": [
